--- a/csszengarden.html
+++ b/csszengarden.html
@@ -1,1 +1,7 @@
 <html lang="en">
+<head>
+    <meta charset="utf-8"
+    <title>CSS Zen Garden: The Beauty of CSS Design</title>
+
+    <link rel="stylesheet" media="screen" href="/219/219.css?v=8mav2013">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengsrden.com/zengarden.xml">
