--- a/csszengarden.html
+++ b/csszengarden.html
@@ -5,3 +5,32 @@
 
     <link rel="stylesheet" media="screen" href="/219/219.css?v=8mav2013">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengsrden.com/zengarden.xml">
+
+    <meta name="viewport" content="wodth=device-width, initial-scale=1.0">
+    <meta name="author" content="Dave Shea">
+    <meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
+    <meta name="robots" content="all">
+
+    <script src="http://use.typekit.net/fzq7emy.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
+
+
+
+
+</head>
+
+<body id="css-zen-garden">
+<div class="page-wrapper">
+    <section class="intro" id="zen-intro">
+        <header role="banner">
+            <h1>CSS zengarden</hl>
+            <h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+        </header>
+
+        <div class="summary" id="zen-summary" role="article">
+            <p>A demonstration of what can be acconplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to loaf it into this page.</p>
+            <p>Download the example <a href="/examples/index" title="This page's source HTML code,not to be modified.">html file</a>and<a htrf="/examples/style.css" title="This page's sample CSS, the flie you may modify.">css flie</a></p>
+        </div>
+    </section>
+</div>
+</body>
