--- a/csszengarden.html
+++ b/csszengarden.html
@@ -31,6 +31,12 @@
             <p>A demonstration of what can be acconplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to loaf it into this page.</p>
             <p>Download the example <a href="/examples/index" title="This page's source HTML code,not to be modified.">html file</a>and<a htrf="/examples/style.css" title="This page's sample CSS, the flie you may modify.">css flie</a></p>
         </div>
+
+        <div class="preamble" id="zen-preamble" role="article">
+            <h3>The Road to Enlightenment</h3>
+            <p>Littering a dark and dreary road lay the past relics of browser-spedific tags, incompatible <abbr title="Document Object Model">DOM</abbr>s, broken <abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.</p>
+            <p>We must clear the mind of the past. Web enlightenment has beem achieved thanks to the tireless efforts of folk like  the <abbr title="World Wide Web Consottium">W3C</abbr>, <abbr title="Web Standerds Project">WaSP</abbr>, and the major browser creator.</p>
+        </div>
     </section>
 </div>
 </body>
