--- a/csszengarden.html
+++ b/csszengarden.html
@@ -36,7 +36,13 @@
             <h3>The Road to Enlightenment</h3>
             <p>Littering a dark and dreary road lay the past relics of browser-spedific tags, incompatible <abbr title="Document Object Model">DOM</abbr>s, broken <abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.</p>
             <p>We must clear the mind of the past. Web enlightenment has beem achieved thanks to the tireless efforts of folk like  the <abbr title="World Wide Web Consottium">W3C</abbr>, <abbr title="Web Standerds Project">WaSP</abbr>, and the major browser creator.</p>
+            <p>The CSS Zen Garden invites you to relax and meditate on the importan lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
         </div>
     </section>
-</div>
+    <div class="main supporting" id="zen-supporting" role="main">
+        <div class="explanation" id="zen-explanation" role="article">
+            <h3>So What is This About?</h3>
+        </div>
+    </div>
+<div>
 </body>
