--- a/html-basic.html
+++ b/html-basic.html
@@ -9,5 +9,21 @@
   <h1>lorem</h1>
   <h2>Lorem,ipsum.</h2>
   <h3>Lorem, ipsum dolor.</h3>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo fugit unde quibusdam qui, enim error doloremque veniam ut cum nisi? Odit iure veritatis cum cupiditate, in distinctio tempore. Natus, laudantium.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi modi, blanditiis atque perferendis culpa eligendi molestias nulla nesciunt, numquam possimus nisi illum exercitationem error. Laudantium aspernatur aliquid quia qui, voluptatum!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quia eum repellendus quam.</p>
+  <a href="https://www.jd.com/" target='_blank'>在新窗口打开京东</a>
+  <a href="mailto:2875673600@qq.com">点我发邮件</a>
+  <a href="#p1">跳到页面底部</a>
+  <a href="." download="text.html">点我下载文件</a>
+  <p><img src="https://github/cat.jpg" alt="" width="200" height="200">></p>
+
+  <hr>
+  <hr>
+
+  <i>正午的阳光</i><strong>在割我的脖子</strong>，<u>生活像是</u><em>断头台</em>，<b>于是我终于腐烂</b>
+
+  <p id="p1">>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<< <span></span></p>
 </body>
 </html>
