--- a/html-basic.html
+++ b/html-basic.html
@@ -19,11 +19,120 @@
   <a href="." download="text.html">点我下载文件</a>
   <p><img src="https://tse3-mm.cn.bing.net/th/id/OIP-C.U3v-JLS28TjigTdiBu0DogHaE8?w=261&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7" alt="" width="200" height="200">></p>
 
-  <hr>
-  <hr>
-
   <i>正午的阳光</i><strong>在割我的脖子</strong>，<u>生活像是</u><em>断头台</em>，<b>于是我终于腐烂</b>
 
-  <p id="p1">>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<< <span></span></p>
+  <hr>
+  <hr>
+  <marquee behavior="" direction="left">happy</marquee>
+  &lt;!--标签出现了--&gt;
+  <pre>
+    <code>print int
+        {}</code>
+  </pre>
+
+  <hr>
+
+  <u1>
+    <li>
+      小学
+      <ol>
+        <li>
+          一年级
+          <ol>
+            <li>上学期</li>
+            <li>下学期</li>
+          </ol>
+        </li>
+        <li>二年级</li>
+        <li>三年级</li>
+      </ol>
+    </li>
+    <li>中学</li>
+    <li>大学</li>
+  </u1>
+
+  <hr>
+
+  <d1>
+    <dt>班级
+      <dd>
+      三年二班
+      </dd>
+    </dt>
+  <dt>
+    老师
+    <dd>张老师</dd>
+    <dd>王老师</dd>
+    <dd>李老师</dd>
+  </dt>
+    <dt>
+      学生
+      <dd>小明</dd>
+      <dd>豆豆</dd>
+    </dt>
+  </d1>
+
+<hr>
+
+  <h2>Google搜索</h2>
+<hr>
+<table border=1>
+    <col>
+    <col bgcolor=red>
+    <thead>
+      <tr>
+        <th>编号</th>
+        <th>品名</th>
+        <th>进价</th>
+        <th>出价</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>aaa</th>
+        <td>a</td>
+        <td rowspan="2">a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+    </tbody>
+  </table>
+
+
+<hr>
+
+<from action="">
+  <p>个人调查信息表</p>
+  <d1>
+
+  </d1>
+
+</from>
+<hr>
+ <a target="bottom-frame" href="https://www.mi.com/">小米</a>
+  <div></div>
+  <iframe name="bottom-frame" src="https://www.nodejs.org/" frameborder="1"></iframe>
+
+ <pre>aaa      bbbbb</pre>
+
+  <p id="p1">>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<< &lt;span&gt;&lt;/span&gt;</p>
+
+
 </body>
 </html>
