--- a/css-block-horizontal-practise.html
+++ b/css-block-horizontal-practise.html
@@ -19,11 +19,16 @@ body > div {
   margin-top: 20px;
 }
 
+body {
+  margin: 0;
+}
+
 section {
   background-color: red;
 }
 
 .a {
+
   margin-left: auto;
   margin-right: auto;
   width: 500px;
