--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -32,15 +32,22 @@ header {
   height: 40px;
   border: 3px solid;
   margin-bottom: 15px;
+  background-color: pink;
 }
 
-#d1 div:nth-child(3n+2) {
-  margin-left: 210px;
+div {
+  margin-left: 200px;
 }
 
-#d1 div:nth-child(3n+3) {
-  margin-left: 410px;
-}
+div:nth-child(3n+2) {
+      margin-left: 400px;
+      margin-top: -55px;
+    }
+    div:nth-child(3n+3) {
+      margin-left: 600px;
+      margin-top: -55px;
+    }
+
 .p3 {
   border: 1px dotted;
   border-color: white white black white;
