--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -22,9 +22,6 @@ header {
   margin-right: auto;
   width: 500px;
 }
-#d1 {
-  margin: 0;
-}
 
 #d1 div {
   box-sizing: border-box;
@@ -35,16 +32,13 @@ header {
   background-color: pink;
 }
 
-div {
-  margin-left: 200px;
-}
 
 div:nth-child(3n+2) {
-      margin-left: 400px;
+      margin-left: 200px;
       margin-top: -55px;
     }
     div:nth-child(3n+3) {
-      margin-left: 600px;
+      margin-left: 400px;
       margin-top: -55px;
     }
 
@@ -64,17 +58,68 @@ div:nth-child(3n+2) {
   text-align: center;
 }
 
+.aaa {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 580px;
+}
+
+.ccc {
+  width: 700px;
+  height: 300px;
+  border: 4px solid;
+  margin: auto;
+}
+
+u1 {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+u1 li {
+  display: inline-block;
+  width: 180px;
+  height: 40px;
+  border: 3px solid;
+  box-sizing: border-box;
+  background-color: pink;
+}
+
+li:nth-child(n + 8) {
+  margin-left: 0;
+}
+
+li {
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+
 </style>
 </head>
 <body style="">
   <header><p class="p1">hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果</p></header>
   <p class="p2">页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px</p>
-  <div class="o">
-    <span>1</span>
-    <span>a</span>
-    <span>a</span>
+  <section class="ccc"><div id="cc">
+    <u1>
+      <li>Lorem.</li>
+      <li>Optio!</li>
+      <li>Sequi?</li>
+      <li>Praesentium?</li>
+      <li>Repudiandae!</li>
+      <li>Architecto.</li>
+      <li>Tenetur!</li>
+      <li>Omnis.</li>
+      <li>Omnis.</li>
+      <li>Et?</li>
+      <li>Possimus!</li>
+      <li>Harum.</li>
+    </u1>
   </div>
-  <div id="d1">
+</section>
+
+  <section class="aaa"><div id="d1">
     <div>宽180高40(包含边框)</div>
     <div>产品</div>
     <div>产品</div>
@@ -87,6 +132,7 @@ div:nth-child(3n+2) {
     <div>边框宽度3px</div>
     <div>产品</div>
     <div>产品</div>
+  </section>
   </div>
     <p class="p3">link</p>
     <p class="p3">link</p>
