--- a/qq-mail-flex.html
+++ b/qq-mail-flex.html
@@ -39,6 +39,7 @@
       flex: 1;
       background-color: white;
       overflow: auto;
+      height: calc(100% - 80px);
     }
   </style>
 </head>
