--- a/noi.html
+++ b/noi.html
@@ -505,3 +505,282 @@
   var c = Number(prompt())
 
 </script>
+
+<script type="x" id="ch0105/01">
+  var n = Number(prompt())
+
+  var all = 0
+  var counter = 1
+
+  while (counter <= n) {
+    var age = Number(prompt())
+    all = all + age
+    counter = counter + 1
+  }
+
+  var average = all / n
+
+  console.log(average.toFixed(2))
+</script>
+
+<script type="x" id="ch0105/02">
+
+  var counter = 1
+  var all = 0
+
+  while (counter <= 12) {
+    var a = Number(prompt())
+    all = all + a
+    counter = counter + 1
+  }
+
+  var average = all / 12
+
+  console.log('$' + average.toFixed(2))
+
+</script>
+
+<script type="x" id="ch0105/03">
+  var n = Number(prompt())
+
+  counter = 1
+  all = 0
+  number = 0
+
+  while (counter <= n) {
+    var number = Number(prompt())
+
+    all = all + number
+    counter = counter + 1
+  }
+
+  var average = all / n
+
+  console.log(average.toFixed(4))
+
+</script>
+
+<script type="x" id="ch0105/04">
+  var n = Number(prompt())
+
+  var counter = 1
+  var all = 0
+
+  while (counter <= n) {
+    var number = Number(prompt())
+
+    all = all + number
+    counter = counter + 1
+  }
+
+  var average = all / n
+
+  console.log(all +' '+ average.toFixed(5))
+
+</script>
+
+<script type="x" id="ch0105/05">
+  var n = Number(prompt())
+
+  var max = 0
+  var count = 0
+
+  while (count < n) {
+    var score = Number(prompt())
+    if (score > max) {
+      max = score
+    }
+
+    count = count + 1
+  }
+
+  console.log(max)
+</script>
+
+<script type="x" id="ch0105/06">
+  var n = Number(prompt())
+
+  var count = 1
+  var max = 0
+  var min = 1000
+
+  while (count <= n) {
+    var all = Number(prompt())
+    if (all > max) {
+      max = all
+    }
+    if (min > all){
+      min = all
+    }
+
+    count = count + 1
+  }
+
+  var a = max - min
+
+  console.log(a)
+
+</script>
+
+<script type="x" id="ch0105/07">
+  var n = Number(prompt())
+
+  var count = 0
+  var a = 0
+  var b = 0
+  var c = 0
+
+  while (count < n) {
+    var one = Number(prompt())
+    var two = Number(prompt())
+    var three = Number(prompt())
+
+    a = one + a
+    b = two + b
+    c = three + c
+    count = count + 1
+  }
+
+  var all = a + b + c
+
+  console.log(a,b,c,all)
+</script>
+
+<script type="x" id="ch0105/08">
+  var n = Number(prompt())
+
+  var count = 1
+  var all = 0
+
+  while (count < n) {
+    var r = Number(prompt())
+
+    all = all + r
+    count = count + 1
+  }
+
+  angle = (n - 2) * 180 - all
+
+  console.log(angle)
+
+</script>
+
+<script type="x" id="ch0105/09">
+  var m = Number(prompt())
+  var n = Number(prompt())
+
+  var sum = 0
+
+  if (m % 2 == 0) {
+    m = m + 1
+  }
+
+  var number = m
+
+  while (number <= n) {
+    sum = sum + number
+
+    number = number + 2
+  }
+
+  console.log(sum)
+
+</script>
+
+<script type="x" id="ch0105/10">
+  var m = Number(prompt())
+  var n = Number(prompt())
+
+  var sum = 0
+  if (m % 17 !== 0) {
+    m = 17 - m % 17 + m
+  }
+
+  var number = m
+  while (number <= n) {
+    sum = sum + number
+    number = number + 17
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/11">
+  var k = Number(prompt())
+
+  var count = 0
+  var a = 0
+  var b = 0
+  var c = 0
+
+  while (count < k) {
+    var zzz = Number(prompt())
+
+    if (zzz == 1 ) {
+      a = a + 1
+    }  else if (zzz == 5) {
+      b = b + 1
+    }  else if (zzz == 10) {
+      c = c + 1
+    }
+    count = count + 1
+  }
+
+  console.log(a)
+  console.log(b)
+  console.log(c)
+
+</script>
+
+<script type="x" id="ch0105/12">
+  var n = Number(prompt())
+  var m = Number(prompt())
+
+  var count = 0
+  var sum = 0
+
+  while (count < n) {
+    var number = Number(prompt())
+    if (number == m) {
+    sum = sum + 1
+    }
+
+    count = count + 1
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/13">
+  var a = Number(prompt())
+  var n = Number(prompt())
+
+  if (a ** n <= 1000000) {
+    sum = a ** n
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/14">
+  var x = Number(prompt())
+  var n = Number(prompt())
+
+  for (var i = 0; i < n; i = i + 1) {
+    x = x + 0.1 / 100 * x
+  }
+
+  console.log(x.toFixed(4))
+</script>
+
+<script type="x" id="ch0105/15">
+  var r = Number(prompt())
+  var m = Number(prompt())
+  var y = Number(prompt())
+
+  for (var i = 0; i < y; i = i + 1) {
+    m = (1 + r / 100) * m
+  }
+
+console.log(Math.floor(m))
+</script>
