--- a/noi.html
+++ b/noi.html
@@ -784,3 +784,606 @@
 
 console.log(Math.floor(m))
 </script>
+
+<script type="x" id="ch0105/16">
+  var n = Number(prompt())
+  var k = Number(prompt())
+
+  var money = 200
+  var m = 1
+
+  while (money - n * m > 0) {
+    money = money + k / 100 * money
+    m = m + 1
+
+    if (m > 20) {
+      console.log('impossible')
+      break
+  }
+  }
+
+  console.log(m)
+
+</script>
+
+<script type="x" id="ch0105/17">
+  var k = Number(prompt())
+
+  var count = 0
+  var n = 0
+  var a = Math.sqrt(5)
+  var b = 0
+
+
+
+  while (count < k) {
+
+    n = (1 / a) * ((1 + a) / 2) ** k - ((1 - a) / 2) ** k
+    count = count + 1
+  }
+
+  console.log(Math.floor(n))
+</script>
+
+<script type="x" id="ch0105/18">
+  var n = Number(prompt())
+  var count = 0
+  var one = 0
+  var two = 0
+
+  while (count < n) {
+    var number = Number(prompt())
+    var valid = Number(prompt())
+
+    if (count == 0) {
+    one = valid / number
+    }
+    if (count > 0) {
+      two = valid / number
+    }
+    if (one - two > 0.05 && two !== 0) {
+      console.log('worse')
+    }  else if (two - one > 0.05) {
+      console.log('better')
+    }  else if (two !== 0){
+      console.log('same')
+    }
+
+    count = count + 1
+  }
+
+</script>
+
+<script type="x" id="ch0105/19">
+  var roof = Number(prompt())
+
+  var count = 0
+  var time = 0
+  var distance = 0
+
+  while (count < roof) {
+    var x = Number(prompt())
+    var y = Number(prompt())
+    var people = Number(prompt())
+
+    distance = Math.sqrt(x ** 2 + y ** 2)
+    time = people * 1 + people * 0.5 + distance * 2 / 50
+
+    count = count + 1
+  }
+
+  console.log(Math.ceil(time))
+</script>
+
+<script type="x" id="ch0105/20">
+  var high = Number(prompt())
+  var H = high
+
+  var count = 0
+  var m = 0
+  var b = 2 ** 10
+
+  while (count < 10) {
+
+    m = m + high
+    high = high / 2
+
+    count = count + 1
+  }
+
+  console.log(m * 2 - H)
+  console.log(high)
+</script>
+
+<script type="x" id="ch0105/21">
+  var n = Number(prompt())
+
+  while (n !== 1) {
+
+    if (n % 2 == 1) {
+      var str = n + '*3+1=' + (n = n * 3 + 1)
+
+      console.log(str)
+    }  else if (n % 2 == 0) {
+      var str = n + '*/2=' + (n = n / 2)
+
+      console.log(str)
+    }
+
+  }
+  console.log('end')
+</script>
+
+<script type="x" id="ch0105/22">
+  var budget = Number(prompt())
+
+  var cash = 0  //手上的钱
+  var deposit = 0  //存下的钱
+  var broke = false  //没钱
+
+  for (var i - 1; i <= 12; i++) {
+    cash += 300
+    var budget = Number(prompt())  //预算
+
+    if (cash < budget) {  //手上的钱小于每月预算
+      console.log(-i)
+      broke = true
+      break
+    }  else {
+      cash -= budget
+      var surplusmoney = cash - cash % 100  //能存下的钱
+      cash -= surplusmoney
+      deposit += surplusmoney
+    }
+  }
+
+  if (!broke) {
+    console.log(cash + deposit * 1.2)
+  }
+
+</script>
+
+<script type="x" id="ch0105/23">
+  var stock = Number(prompt())
+  var n = Number(prompt())
+
+  var count = 0
+
+  for (var i = 0;i < n;i++) {
+    var need = Number(prompt())
+    if (stock >= need) {
+      stock -= need
+    } else {
+      count++
+    }
+  }
+
+  count.log(count)
+</script>
+
+<script type="x" id="ch0105/24">
+
+var n = Number(prompt())
+var max = 0  //最大正常
+var total = 0  //总计正常
+
+for (var i = 0;i < n; i++) {
+  var high = Number(prompt())
+  var low = Number(prompt())
+  var normal = false
+
+  if (high >= 90 && high <= 140 && low >= 60 && low <= 90 ) {
+    normal = true
+  }
+
+  if (!normal) {
+    total = 0
+  } else {
+    total++
+    if (total > max) {
+      max = total
+    }
+  }
+}
+
+  console.log(max)
+</script>
+
+<script type="x" id="ch0105/25">
+  for (var x = 81; x <= 342; x++) {
+    var a7 = x % 7
+    var b7 = (x - a7) / 7 % 7
+    var c7 = (x - a7 - b7 * 7) / 7 / 7 % 7
+
+    var a9 = x % 9
+    var b9 = (x - a9) / 9 % 9
+    var c9 = (x - a9 - b9 * 9) / 9 / 9 % 9
+
+    if (a7 == c9 && a9 == c7 && b7 == b9) {
+      console.log(x)
+      console.log('' + c7 + b7 + a7)
+      console.log('' + c9 + b9 + a9)
+      break
+    }
+  }
+
+</script>
+
+<script type="x" id="ch0105/26">
+  var x = Number(prompt())
+  var count = 0
+
+  var a = x % 10
+  var b = (x - a) / 10 % 10
+  var c = (x - a- b * 10) / 10 / 10 % 10
+  var d = (x - xa - b * 10 - c * 100) / 10 / 10 / 10 % 10
+
+  if (a - b - c - d > 0) {
+    count++
+  }
+
+  console.log(count)
+</script>
+
+<script type="x" id="ch0105/27">
+  var k = Number(prompt())
+
+  var sum = 0
+  for (var i = 0; ;i++) {
+    sum += 1 / i
+    if (sum > k) {
+      break
+    }
+  }
+
+  console.log(i)
+</script>
+
+<script type="x" id="ch0105/28">
+  var n = Number(prompt())
+
+  do {
+    var d = n % 10
+    console.log(d)
+    n = n - d
+    n = n / 10
+  }  while (n > 0)
+
+</script>
+
+<script type="x" id="ch0105/29">
+  var n = Number(prompt())
+  var sign = 1
+
+  if (n < 0) {
+    n = -n
+    sign = -1
+  }
+
+  var str = ''
+
+  do {
+    var d = n % 10
+    str = str + d
+    n = n - d
+    n = n / 10
+  } while (n > 0)
+
+  if (sign == 1) {
+    console.log(str)
+  } else {
+    console.log('' + str)
+  }
+
+    console.log(str)
+</script>
+
+<script type="x" id="ch0105/30">
+  var m = Number(prompt())
+  var k = Number(prompt())
+
+  var count = 0
+
+  while (m > 0) {
+    var d = m % 10
+    if (d == 3) {
+      count++
+    }
+
+    m = (m - d) / 10
+  }
+
+  if (count === k) {
+    console.log('YES')
+  } else {
+    console.log('NO')
+  }
+
+</script>
+
+<script type="x" id="ch0105/31">
+  var n = Number(prompt())
+  var m = Number(prompt())
+
+
+  for (var i = 1; i <= n ;i++) {
+    var open = true
+
+    for (var j = 1; j <= m; j++) {
+      if (i % j == 0) {
+        open = !open
+      }
+    }
+
+    if (!open) {
+      console.log(i)
+    }
+   }
+
+</script>
+
+<script type="x" id="ch0105/32">
+  var n = Number(prompt())
+
+  var a = 1
+  var b = 2
+
+  for (var i = 0;i < n;i++) {
+    sum += b / a
+    a = b
+    b = c
+  }
+
+  console.log(sum.toFixed(4))
+
+</script>
+
+<script type="x" id="ch0105/33">
+  var n = Number(prompt())
+
+  var sum = 0
+
+  for (var i = 1; i <= n; i++) {
+    if (i % 2 == 1) {
+      sum += 1 / i
+    } else {
+      sum -= 1 / i
+    }
+  }
+
+  // var sign = 1
+  // for (var i = 1; i <= n; i++) {
+  //   sum += 1 / i * sign
+  //   sign = -sign
+  // }
+
+  console.log(sum.toFixed(4))
+</script>
+
+<script type="x" id="ch0105/34">
+  var n = Number(prompt())
+
+  var sum = 0
+
+  for (var i = 1;i <= n;i++) {
+    var factorial = 1
+    for (var j = 1;j <= i ; j++) {
+      factorial *= j
+    }
+
+    sum += factorial
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/35">
+  var n = Number(prompt())
+
+  var sum = 1
+
+  for (var i = 1;i <= n;i++) {
+    var factorial = 1
+    for (var j = 1;j <= i ; j++) {
+      factorial *= j
+    }
+
+    sum += 1 / factorial
+  }
+
+  console.log(sum)
+
+</script>
+
+<script type="x" id="ch0105/36">
+  var x = Number(prompt())
+  var n = Number(prompt())
+
+  var sum = 0
+  var p = 1
+
+  for (var i = 0;i <= n ;i++) {
+    sum += p
+    p = p * x
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/37">
+
+</script>
+
+<script type="x" id="ch0105/38">
+  var n = Number(prompt())
+
+  for (var i = 1; i <= n; i++) {
+    var m = Number(prompt())
+    var M = m
+
+    if (m == 0) {
+      var c = Number(prompt())
+      console.log(0)
+    } else {
+      for (var j = 0; j <= M;j++) {
+        var c = Number(prompt())
+        if (j !== m) {
+          console.log(c * m)
+        }
+        m--
+      }
+    }
+  }
+
+</script>
+
+<script type="x" id="ch0105/39">
+  var n = Number(prompt())
+
+  var sum = 0
+
+  for (var i = 1; i < n;i++) {
+    if (i % 7 !== 0) {
+      var without7 = flase
+
+      var j = i
+      while (j > 0) {
+        var d = j % 10
+        if (d == 7) {
+          without7 = teue
+          break
+        }
+        j = (j - d) / 10
+      }
+    }
+  }
+
+  if (!without7) {
+    sum += i * i
+  }
+
+  console.log(sum)
+</script>
+
+<script type="x" id="ch0105/40">
+  var n = Number(prompt())
+
+  var count = 0
+
+  for (var i = 1;i <= n;i++) {
+    var x = i
+
+    while (x > 0) {
+      var d = x % 10
+      if (d == 1) {
+        count++
+      }
+      x = (x - d) / 10
+    }
+  }
+
+  console.log(count)
+
+</script>
+
+<script type="x" id="ch0105/41">
+  var start = Number(prompt())
+  var end = Number(prompt())
+
+  var count = 0
+
+  for (var i = start;i <= end;i++) {
+    var x = i
+
+    while (x > 0) {
+      var d = x % 10
+      if (d == 2) {
+        count++
+      }
+      x = (x - d) / 10
+    }
+  }
+
+  console.log(count)
+
+</script>
+
+<script type="x" id="ch0105/42">
+  <script type="x" id="ch0105/42">
+    var h = Number(prompt())
+    var w = Number(prompt())
+    var char = Number(prompt())
+    var fill = Number(prompt())
+
+    var edgeLine = char // 边缘的行
+    var midLine = char // 中间的那些行
+    for (var i = 1; i < w; i++) {
+      edgeLine += char
+      if (fill) {
+        midLine += char
+      } else {
+        midLine += ' '
+      }
+    }
+
+    edgeLine += char
+    midLine += char
+
+    var result = edgeLine + '\n'
+    for (var j = 1; j < h - 1; j++) {
+      result += midLine + '\n'
+    }
+    result += edgeLine
+
+    console.log(result)
+  </script>
+
+<script type="x" id="ch0105/43">
+  var n = Number(prompt())
+
+  for (var i = 2; i < n ; i++) {
+    if (n % i == 0) {
+      console.log(n / i)
+      break
+    }
+  }
+
+
+</script>
+
+<script type="x" id="ch0105/44">
+  var n = Number(prompt())
+
+  var count = 0
+
+  for (var i = 2; ; i++) {
+    var prime = true
+
+    for (var j = 2; j < i; j++) {
+      if (i % j == 0) {
+        prime = false
+        break
+      }
+    }
+  }
+
+</script>
+
+<script type="x" id="ch0105/45">
+  var n = Number(prompt())
+
+  var sum = 0
+  var coins = 1
+  var days = 0
+
+  for (var i = 1; i <= n; i++) {
+    sum += coins
+    days++
+
+    if (days === coins) {
+      coins++
+      day = 0
+    }
+  }
+
+</script>
